--- a/src/WebAppCD/Views/Home/About.cshtml
+++ b/src/WebAppCD/Views/Home/About.cshtml
@@ -7,3 +7,5 @@
 <p>Use this area to provide additional information.</p>
 
 <p>Hi Doris 2 times again 4th time 1619 to 20</p>
+
+<h3>Now in Github</h3> 
